manifest_examples/annotations_ingressController_ingressRules/pod_annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    enviroment: production
  annotations: # Notas para especificar cosas
    minota: valordeminota
    version: laultima
    autor: yo
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80

# Las anotaciones aparacen cuando le das describe al objeto
