manifest_examples/annotations_ingressController_ingressRules/deploy_httpd.yaml
# Haremos un deploy httpd y definiremos un servicio para accesar al cluster
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: 
    app: httpd
  name: httpd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: httpd:latest
---
apiVersion: v1
kind: Service
metadata:
  name: httpd
spec:
  ports:
  - name: httpd
    targetPort: 80
    port: 80
  selector:
    app: httpd
  type: NodePort
